--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,12 +2,14 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
+		<link rel="stylesheet" href="/build/app.css">
+		<link rel="icon" type="image/png" href="{{ asset('build/wild.png') }}"/>
 		<title>
 			{% block title %}Welcome!
 			{% endblock %}
 		</title>
 		{# Run `composer require symfony/webpack-encore-bundle`
-																		           and uncomment the following Encore helpers to start using Symfony UX #}
+																																																																				           and uncomment the following Encore helpers to start using Symfony UX #}
 		{% block stylesheets %}
 			{#{{ encore_entry_link_tags('app') }}#}
 		{% endblock %}
@@ -18,7 +20,11 @@
 	</head>
 	<body>
 		{% block body %}
+			<header>
+				{% include "_navbar.html.twig" %}
+			</header>
 			{% block header %}{% endblock %}
 		{% endblock %}
 	</body>
+	<script src="/build/app.js"></script>
 </html>
