--- a/templates/program/index.html.twig
+++ b/templates/program/index.html.twig
@@ -2,9 +2,14 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
+		<link rel="stylesheet" href="/build/app.css">
+		<link rel="icon" type="image/png" href="{{ asset('build/wild.png') }}"/>
 		<title>Wild Series</title>
 	</head>
 	<body>
+		<header>
+			{% include "_navbar.html.twig" %}
+		</header>
 		<h1>{{ website }}
 			index</h1>
 	</body>
