--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -10,6 +10,6 @@
 		<header>
 			{% include "_navbar.html.twig" %}
 		</header>
-		<h1>Programs Index</h1>
+		<h1>Program #{{ id }}</h1>
 	</body>
 </html>
