--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -1,10 +1,23 @@
 {% block navbar %}
-	<nav class="navbar navbar-light  bg-primary">
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 		<div class="container-fluid">
 			<a class="navbar-brand text-white" href="/">
 				<img src="{{ asset('build/wild.png') }}" alt="" width="30" height="30" class="d-inline-block align-text-top">
 				Wild Series
 			</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+					<li class="nav-item">
+						<a class="nav-link" href="{{ path("category_index")}}">Catégories</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="{{ path("program_index")}}">Programmes</a>
+					</li>
+				</ul>
+			</div>
 		</div>
 	</nav>
 {% endblock %}
