--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,29 +2,27 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<link rel="stylesheet" href="/build/app.css">
 		<link rel="icon" type="image/png" href="{{ asset('build/wild.png') }}"/>
 		<title>
 			{% block title %}Welcome!
 			{% endblock %}
 		</title>
 		{# Run `composer require symfony/webpack-encore-bundle`
-																																																																				           and uncomment the following Encore helpers to start using Symfony UX #}
+																																																																																				           and uncomment the following Encore helpers to start using Symfony UX #}
 		{% block stylesheets %}
-			{#{{ encore_entry_link_tags('app') }}#}
+			{{ encore_entry_link_tags('app') }}
 		{% endblock %}
 
-		{% block javascripts %}
-			{#{{ encore_entry_script_tags('app') }}#}
-		{% endblock %}
 	</head>
 	<body>
+		<header>
+			{% include "_navbar.html.twig" %}
+		</header>
 		{% block body %}
-			<header>
-				{% include "_navbar.html.twig" %}
-			</header>
 			{% block header %}{% endblock %}
 		{% endblock %}
+		{% block javascripts %}
+			{{ encore_entry_script_tags('app') }}
+		{% endblock %}
 	</body>
-	<script src="/build/app.js"></script>
 </html>
