--- a/templates/program/index.html.twig
+++ b/templates/program/index.html.twig
@@ -1,15 +1,26 @@
-<!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<link rel="stylesheet" href="/build/app.css">
-		<link rel="icon" type="image/png" href="{{ asset('build/wild.png') }}"/>
-		<title>Wild Series</title>
-	</head>
-	<body>
-		<header>
-			{% include "_navbar.html.twig" %}
-		</header>
-		<h1>Programs Index</h1>
-	</body>
-</html>
+{% extends 'base.html.twig' %}
+
+{% block title %}All programs
+{% endblock %}
+
+{% block body %}
+	<h1>Toutes les séries de la table program :
+	</h1>
+	{% for program in programs %}
+		<div>
+			<h2>{{ loop.index }}
+				-
+				{{ program.title }}
+				- Catégorie :
+				{{ program.category.name }}</h2>
+			<p>{{ program.summary }}</p>
+			<a href="{{ path("program_show", { id: program.id }) }}">Voir la fiche</a>
+		</div>
+	{% else %}
+		Aucune série trouvée.
+	{% endfor %}
+
+	<a href="{{ path('app_index') }}">
+		Retour à l'accueil
+	</a>
+{% endblock %}
