--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,4 +1,6 @@
 {% extends "base.html.twig" %}
-{% block header %}
-	<h1>Bienvenue !</h1>
+{% block page_title %}
+	<div>
+		<h1>Homepage en construction !</h1>
+	</div>
 {% endblock %}
