--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,11 +4,11 @@
 		<meta charset="UTF-8">
 		<link rel="icon" type="image/png" href="{{ asset('build/wild.png') }}"/>
 		<title>
-			{% block title %}Welcome!
+			{% block title %}Wild Series
 			{% endblock %}
 		</title>
 		{# Run `composer require symfony/webpack-encore-bundle`
-																																																																																				           and uncomment the following Encore helpers to start using Symfony UX #}
+																																																																																																										           and uncomment the following Encore helpers to start using Symfony UX #}
 		{% block stylesheets %}
 			{{ encore_entry_link_tags('app') }}
 		{% endblock %}
@@ -18,11 +18,11 @@
 		<header>
 			{% include "_navbar.html.twig" %}
 		</header>
-		{% block body %}
-			{% block header %}{% endblock %}
-		{% endblock %}
-		{% block javascripts %}
-			{{ encore_entry_script_tags('app') }}
-		{% endblock %}
-	</body>
-</html>
+		<div class="m-4"> {% block page_title %}{% endblock %}
+			</div>
+			{% block body %}{% endblock %}
+			{% block javascripts %}
+				{{ encore_entry_script_tags('app') }}
+			{% endblock %}
+		</body>
+	</html>
