--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -1,26 +1,47 @@
 {% extends 'base.html.twig' %}
 
-{# {% block title %}Catégorie
+{% block title %}
+	{{parent()}}
+	-
 	{{ category.name }}
-{% endblock %} #}
+{% endblock %}
+
+{% block page_title %}
+	<h1>{{ category.name }}
+	</h1>
+	<p class="text-muted">3 derniers programmes</p>
+{% endblock %}
 
 {% block body %}
-	{% for program in programs %}
-		<div class="media">
-			<div class="media-body">
-				<h1 class="mt-0">{{ program.id }}
-					-
-					<a href="{{ path('program_show', {id: program.id}) }}">{{ program.title }}</h1>
-				</a>
-				<p>{{ program.summary }}</p>
+
+	<div class="accordion accordion-flush" id="programAccordion">
+		{% for program in programs %}
+			<div class="accordion-item">
+				<h2 class="accordion-header" id="flush-heading-{{program.id}}">
+					<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse-{{program.id}}" aria-expanded="false" aria-controls="flush-collapseOne">
+						{{ program.title }}
+					</button>
+				</h2>
+				<div id="flush-collapse-{{program.id}}" class="accordion-collapse collapse" aria-labelledby="flush-heading-{{program.id}}" data-bs-parent="#accordionFlushExample">
+					<div class="accordion-body">
+						<a href="{{ path("category_index", { name: program.category }) }}">
+							<span class="badge bg-light text-dark mb-4">
+								{{ program.category.name }}
+							</span>
+						</a>
+						<p>{{ program.summary }}</p>
+						<a href="{{ path("program_show", { id: program.id }) }}" class="btn btn-secondary m-4" role="button">Voir la fiche</a>
+					</div>
+				</div>
 			</div>
-		</div>
+		{% else %}
+			<p class="m-5">
+				Aucune série trouvée.
+			</p>
+		{% endfor %}
+	</div>
 
-		<a href="{{ path('category_index') }}">
-			Retour à la liste des catégories
-		</a>
-	{% else %}
-		Aucune série trouvée.
-	{% endfor %}
-
+	<a href="{{ path('app_index') }}" class="btn btn-secondary m-4" role="button">
+		Retour à l'accueil
+	</a>
 {% endblock %}
