--- a/templates/program/index.html.twig
+++ b/templates/program/index.html.twig
@@ -1,26 +1,45 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}All programs
+{% block title %}
+	{{parent()}}
+	- Programmes
+{% endblock %}
+
+{% block page_title %}
+	<h1>Toutes les séries
+	</h1>
 {% endblock %}
 
 {% block body %}
-	<h1>Toutes les séries de la table program :
-	</h1>
-	{% for program in programs %}
-		<div>
-			<h2>{{ loop.index }}
-				-
-				{{ program.title }}
-				- Catégorie :
-				{{ program.category.name }}</h2>
-			<p>{{ program.summary }}</p>
-			<a href="{{ path("program_show", { id: program.id }) }}">Voir la fiche</a>
-		</div>
-	{% else %}
-		Aucune série trouvée.
-	{% endfor %}
 
-	<a href="{{ path('app_index') }}">
+	<div class="accordion accordion-flush" id="programAccordion">
+		{% for program in programs %}
+			<div class="accordion-item">
+				<h2 class="accordion-header" id="flush-heading-{{program.id}}">
+					<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse-{{program.id}}" aria-expanded="false" aria-controls="flush-collapseOne">
+						{{ program.title }}
+					</button>
+				</h2>
+				<div id="flush-collapse-{{program.id}}" class="accordion-collapse collapse" aria-labelledby="flush-heading-{{program.id}}" data-bs-parent="#accordionFlushExample">
+					<div class="accordion-body">
+						<a href="{{ path("category_index", { name: program.category }) }}">
+							<span class="badge bg-light text-dark mb-4">
+								{{ program.category.name }}
+							</span>
+						</a>
+						<p>{{ program.summary }}</p>
+						<a href="{{ path("program_show", { id: program.id }) }}" class="btn btn-secondary m-4" role="button">Voir la fiche</a>
+					</div>
+				</div>
+			</div>
+		{% else %}
+			<p class="m-5">
+				Aucune série trouvée.
+			</p>
+		{% endfor %}
+	</div>
+
+	<a href="{{ path('app_index') }}" class="btn btn-secondary m-4" role="button">
 		Retour à l'accueil
 	</a>
 {% endblock %}
