--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -1,22 +1,38 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Série #{{ program.id }}
+{% block title %}
+	{{parent()}}
+	-
+	{{program.title}}
 {% endblock %}
 
 {% block body %}
 
-	<div class="media">
-		<img class="align-self-start mr-3" src="{{program.poster}}" alt="{{ program.title }} poster">
-		<div class="media-body">
-			<h1 class="mt-0">{{ program.title }}</h1>
-			<p>{{ program.summary }}</p>
-			<p>Catégorie :
-				{{ program.category.name }}</p>
+	<div class="card m-5" style="width: 50vw">
+		<img src="{{program.poster}}" alt="{{ program.title }}" type="button" data-bs-toggle="modal" data-bs-target="#imageModal" class="card-img-top" style="height: 50vh; object-fit: cover; object-position: center top">
+		<div class="modal fade" id="imageModal" tabindex="-1" aria-labelledby="imageModalLabel" aria-hidden="true">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h5 class="modal-title" id="imageModalLabel">{{ program.title }}</h5>
+						<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+					</div>
+					<img src="{{program.poster}}" alt="{{ program.title }}" type="button" data-bs-tclass="card-img-top">
+				</div>
+			</div>
+		</div>
+		<div class=" card-body">
+			<h2 class="card-title">{{ program.title }}</h2>
+			<p class="card-text">{{ program.summary }}</p>
+			<a href="{{ path("category_index", { name: program.category }) }}">
+				<span class="badge bg-light text-dark">
+					{{ program.category.name }}
+				</span>
+			</a>
 		</div>
 	</div>
 
-	<a href="{{ path('program_index') }}">
-		Retour à la liste des programmes
+	<a href="{{ path('app_index') }}" class="btn btn-secondary m-4" role="button">
+		Retour à l'accueil
 	</a>
-
 {% endblock %}
