--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,7 +8,7 @@
 			{% endblock %}
 		</title>
 		{# Run `composer require symfony/webpack-encore-bundle`
-																																																																																																										           and uncomment the following Encore helpers to start using Symfony UX #}
+																																																																																																																		           and uncomment the following Encore helpers to start using Symfony UX #}
 		{% block stylesheets %}
 			{{ encore_entry_link_tags('app') }}
 		{% endblock %}
@@ -18,9 +18,11 @@
 		<header>
 			{% include "_navbar.html.twig" %}
 		</header>
-		<div class="m-4"> {% block page_title %}{% endblock %}
+		<div class="container">
+			<div class="m-4"> {% block page_title %}{% endblock %}
+				</div>
+				{% block body %}{% endblock %}
 			</div>
-			{% block body %}{% endblock %}
 			{% block javascripts %}
 				{{ encore_entry_script_tags('app') }}
 			{% endblock %}
