--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -7,28 +7,31 @@
 {% endblock %}
 
 {% block body %}
-
-	<div class="card m-5" style="width: 50vw">
-		<img src="{{program.poster}}" alt="{{ program.title }}" type="button" data-bs-toggle="modal" data-bs-target="#imageModal" class="card-img-top" style="height: 50vh; object-fit: cover; object-position: center top">
-		<div class="modal fade" id="imageModal" tabindex="-1" aria-labelledby="imageModalLabel" aria-hidden="true">
-			<div class="modal-dialog">
-				<div class="modal-content">
-					<div class="modal-header">
-						<h5 class="modal-title" id="imageModalLabel">{{ program.title }}</h5>
-						<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+	<div class="row">
+		<div class="col-12 col-lg-8">
+			<div class="card my-5">
+				<img src="{{program.poster}}" alt="{{ program.title }}" type="button" data-bs-toggle="modal" data-bs-target="#imageModal" class="card-img-top" style="height: 40vh; object-fit: cover; object-position: center top">
+				<div class="modal fade" id="imageModal" tabindex="-1" aria-labelledby="imageModalLabel" aria-hidden="true">
+					<div class="modal-dialog">
+						<div class="modal-content">
+							<div class="modal-header">
+								<h5 class="modal-title" id="imageModalLabel">{{ program.title }}</h5>
+								<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+							</div>
+							<img src="{{program.poster}}" alt="{{ program.title }}" type="button" data-bs-tclass="card-img-top">
+						</div>
 					</div>
-					<img src="{{program.poster}}" alt="{{ program.title }}" type="button" data-bs-tclass="card-img-top">
+				</div>
+				<div class=" card-body">
+					<h2 class="card-title">{{ program.title }}</h2>
+					<p class="card-text">{{ program.summary }}</p>
+					<a href="{{ path("category_index", { name: program.category }) }}">
+						<span class="badge bg-light text-dark">
+							{{ program.category.name }}
+						</span>
+					</a>
 				</div>
 			</div>
-		</div>
-		<div class=" card-body">
-			<h2 class="card-title">{{ program.title }}</h2>
-			<p class="card-text">{{ program.summary }}</p>
-			<a href="{{ path("category_index", { name: program.category }) }}">
-				<span class="badge bg-light text-dark">
-					{{ program.category.name }}
-				</span>
-			</a>
 		</div>
 	</div>
 
