--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -14,7 +14,7 @@
 						<a class="nav-link" href="{{ path("category_index")}}">Catégories</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="{{ path("program_index")}}">Programmes</a>
+						<a class="nav-link" href="{{ path("program_index")}}">Séries</a>
 					</li>
 				</ul>
 			</div>
