--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -7,8 +7,10 @@
 {% endblock %}
 
 {% block page_title %}
-	<h1>{{ category.name }}
-	</h1>
+	<a href="{{ path("category_index")}}" class=" text-decoration-none">
+		<h1>{{category.name}}
+		</h1>
+	</a>
 	<p class="text-muted">3 derniers programmes</p>
 {% endblock %}
 
