--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -26,13 +26,13 @@
 				</h2>
 				<div id="flush-collapse-{{program.id}}" class="accordion-collapse collapse" aria-labelledby="flush-heading-{{program.id}}" data-bs-parent="#accordionFlushExample">
 					<div class="accordion-body">
-						<a href="{{ path("category_index", { name: program.category }) }}">
+						<a href="{{ path("category_index", { category: program.id}) }}">
 							<span class="badge bg-light text-dark mb-4">
 								{{ program.category.name }}
 							</span>
 						</a>
 						<p>{{ program.summary }}</p>
-						<a href="{{ path("program_show", { id: program.id }) }}" class="btn btn-secondary m-4" role="button">Voir la fiche</a>
+						<a href="{{ path("program_show", { program: program.id }) }}" class="btn btn-secondary m-4" role="button">Voir la fiche</a>
 					</div>
 				</div>
 			</div>
