--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -23,7 +23,7 @@
 					</div>
 				</div>
 				<div class=" card-body">
-					<a href="{{ path("category_index", { name: program.category }) }}">
+					<a href="{{ path("category_index", { category: program.id}) }}">
 						<span class="badge bg-light text-dark my-3">
 							{{ program.category.name }}
 						</span>
@@ -35,7 +35,7 @@
 					<div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
 						<div class="btn-group me-2 flex-wrap" role="group" aria-label="First group">
 							{% for season in seasons %}
-								<a href="{{ path("program_season_show", { programId: program.id, seasonId: season.id }) }}" class="btn btn-secondary" role="button">
+								<a href="{{ path("program_season_show", { program: program.id, season: season.id }) }}" class="btn btn-secondary" role="button">
 									{{season.number}}
 								</a>
 							{% else %}
