--- a/templates/season/_delete_form.html.twig
+++ b/templates/season/_delete_form.html.twig
@@ -1,4 +1,4 @@
 <form method="post" action="{{ path('season_delete', {'id': season.id}) }}" onsubmit="return confirm('Etes-vous sûr de vouloir supprimer cette saison ?');">
 	<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ season.id) }}">
-	<button class="btn btn-danger">Supprimer</button>
+	<button class="btn btn-danger mb-5">Supprimer</button>
 </form>
