--- a/templates/episode/new.html.twig
+++ b/templates/episode/new.html.twig
@@ -13,7 +13,7 @@
 {% block body %}
 	{{ include('episode/_form.html.twig') }}
 
-	<a href="{{ path('episode_index') }}" class="btn btn-secondary m-4" role="button">
+	<a href="{{ path('program_index') }}" class="btn btn-secondary m-4" role="button">
 		Retour
 	</a>
 {% endblock %}
