--- a/templates/program/new.html.twig
+++ b/templates/program/new.html.twig
@@ -10,6 +10,8 @@
 	</h1>
 {% endblock %}
 
+{% form_theme form 'bootstrap_5_layout.html.twig' %}
+
 {% block body %}
 	{{ form_start(form) }}
 	<div class="form-control mb-3">
