--- a/templates/program/season_show.html.twig
+++ b/templates/program/season_show.html.twig
@@ -9,10 +9,8 @@
 {% endblock %}
 
 {% block page_title %}
-	<a href="{{ path("program_show", { id: program.id }) }}" class="text-decoration-none">
-		<h1>{{program.title}}
-		</h1>
-	</a>
+	<h1>{{program.title}}
+	</h1>
 {% endblock %}
 
 {% block body %}
@@ -23,6 +21,11 @@
 					<h2 class="card-title">Saison
 						{{ season.number }}</h2>
 					<p class="card-text">{{ season.year }}</p>
+					<div class="btn-group me-2 flex-wrap" role="group" aria-label="First group">
+						<a href="{{ path('episode_new') }}" class="btn btn-success mb-5" role="button">Créer Episode</a>
+						<a href="{{ path("season_edit", { id: season.id }) }}" class="btn btn-warning mb-5" role="button">Editer</a>
+						{{ include('season/_delete_form.html.twig') }}
+					</div>
 					<div class="accordion accordion-flush" id="episodeAccordion">
 						{% for episode in episodes %}
 							<div class="accordion-item">
@@ -35,6 +38,8 @@
 								</h2>
 								<div id="flush-collapse-{{episode.id}}" class="accordion-collapse collapse" aria-labelledby="flush-heading-{{episode.id}}" data-bs-parent="#accordionFlushExample">
 									<div class="accordion-body">
+										<a href="{{ path('episode_edit', {'id': episode.id}) }}" class="btn btn-warning" role="button">Editer</a>
+										{{ include('episode/_delete_form.html.twig') }}
 										<p>{{ episode.summary }}</p>
 									</div>
 								</div>
@@ -50,7 +55,7 @@
 		</div>
 	</div>
 
-	<a href="{{ path('app_index') }}" class="btn btn-secondary m-4" role="button">
-		Retour à l'accueil
+	<a href="{{ path('program_show', {'id': program.id}) }}" class="btn btn-secondary m-4" role="button">
+		Retour
 	</a>
 {% endblock %}
