--- a/templates/season/edit.html.twig
+++ b/templates/season/edit.html.twig
@@ -14,7 +14,7 @@
 	{{ include('season/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
 	{{ include('season/_delete_form.html.twig') }}
 
-	<a href="{{ path('season_index') }}" class="btn btn-secondary m-4" role="button">
+	<a href="{{ path('program_index') }}" class="btn btn-secondary m-4" role="button">
 		Retour
 	</a>
 
