bonus : update crud buttons color schema

--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -3,6 +3,9 @@ $primary: #582a72;
 $secondary: #764b8e;
 $light: #9774ab;
 $dark: #3e1256;
+$danger: #610b25;
+$warning: #6d547c;
+$success: #3a573d;
 
 // the ~ allows you to reference things in node_modules
 @import "~bootstrap/scss/bootstrap";
