--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -16,6 +16,9 @@
 					<li class="nav-item">
 						<a class="nav-link" href="{{ path("program_index")}}">Séries</a>
 					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="{{ path("actor_index")}}">Acteurs</a>
+					</li>
 				</ul>
 			</div>
 		</div>
