--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -48,6 +48,19 @@
 							{% endfor %}
 						</div>
 					</div>
+					<hr/>
+					<p class="h5">Acteurs</p>
+					<ul class="list-group-flush">
+						{% for actor in program.actors %}
+							<li class="list-group-item">
+								<a href="{{ path("actor_show", { id: actor.id }) }}" class="text-decoration-none ">
+									{{ actor.name }}
+								</a>
+							</li>
+						{% else %}
+							<li class="list-group-item">Aucun acteur</li>
+						{% endfor %}
+					</ul>
 				</div>
 			</div>
 		</div>
