--- a/templates/category/index.html.twig
+++ b/templates/category/index.html.twig
@@ -17,7 +17,7 @@
 		{% for category in categories %}
 			<li class="list-group-item">
 				<h2 class="h4">
-					<a href="{{ path('category_show', {'id' : category.id}) }}" class="text-decoration-none">{{ category.name }}</a>
+					<a href="{{ path('category_show', {'slug' : category.slug}) }}" class="text-decoration-none">{{ category.name }}</a>
 				</h2>
 			</li>
 		{% else %}
