--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -14,7 +14,7 @@
 {% endblock %}
 
 {% block body %}
-	<a href="{{ path('category_edit', {'id': category.id}) }}" class="btn btn-warning" role="button">Editer</a>
+	<a href="{{ path('category_edit', {'slug': category.slug}) }}" class="btn btn-warning" role="button">Editer</a>
 	{{ include('category/_delete_form.html.twig') }}
 	<div class="accordion accordion-flush" id="programAccordion">
 		{% for program in programs %}
@@ -27,7 +27,7 @@
 				<div id="flush-collapse-{{program.id}}" class="accordion-collapse collapse" aria-labelledby="flush-heading-{{program.id}}" data-bs-parent="#accordionFlushExample">
 					<div class="accordion-body">
 						<p>{{ program.summary }}</p>
-						<a href="{{ path("program_show", { id: program.id }) }}" class="btn btn-secondary m-4" role="button">Voir la fiche</a>
+						<a href="{{ path("program_show", { slug: program.slug }) }}" class="btn btn-secondary m-4" role="button">Voir la fiche</a>
 					</div>
 				</div>
 			</div>
