--- a/templates/episode/_delete_form.html.twig
+++ b/templates/episode/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('episode_delete', {'id': episode.id}) }}" onsubmit="return confirm('Etes-vous sûr de vouloir supprimer cet épisode ?');">
+<form method="post" action="{{ path('episode_delete', {'slug': episode.slug}) }}" onsubmit="return confirm('Etes-vous sûr de vouloir supprimer cet épisode ?');">
 	<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ episode.id) }}">
 	<button class="btn btn-danger mb-5">Supprimer</button>
 </form>
