--- a/templates/episode/show.html.twig
+++ b/templates/episode/show.html.twig
@@ -43,7 +43,7 @@
 		</tbody>
 	</table>
 
-	<a href="{{ path('episode_edit', {'id': episode.id}) }}" class="btn btn-warning" role="button">Editer</a>
+	<a href="{{ path('episode_edit', {'slug': episode.slug}) }}" class="btn btn-warning" role="button">Editer</a>
 	{{ include('episode/_delete_form.html.twig') }}
 
 	<a href="{{ path('episode_index') }}" class="btn btn-secondary m-4" role="button">Retour</a>
