--- a/templates/program/index.html.twig
+++ b/templates/program/index.html.twig
@@ -23,13 +23,13 @@
 				</h2>
 				<div id="flush-collapse-{{program.id}}" class="accordion-collapse collapse" aria-labelledby="flush-heading-{{program.id}}" data-bs-parent="#accordionFlushExample">
 					<div class="accordion-body">
-						<a href="{{ path("category_show", { id: program.category.id }) }}">
+						<a href="{{ path("category_show", { slug: program.category.slug }) }}">
 							<span class="badge bg-light text-dark mb-4">
 								{{ program.category.name }}
 							</span>
 						</a>
 						<p>{{ program.summary }}</p>
-						<a href="{{ path("program_show", { id: program.id }) }}" class="btn btn-secondary m-4" role="button">Voir la fiche</a>
+						<a href="{{ path("program_show", { slug: program.slug }) }}" class="btn btn-secondary m-4" role="button">Voir la fiche</a>
 					</div>
 				</div>
 			</div>
