--- a/templates/program/season_show.html.twig
+++ b/templates/program/season_show.html.twig
@@ -38,8 +38,11 @@
 								</h2>
 								<div id="flush-collapse-{{episode.id}}" class="accordion-collapse collapse" aria-labelledby="flush-heading-{{episode.id}}" data-bs-parent="#accordionFlushExample">
 									<div class="accordion-body">
-										<a href="{{ path('episode_edit', {'slug': episode.slug}) }}" class="btn btn-warning" role="button">Editer</a>
-										{{ include('episode/_delete_form.html.twig') }}
+										<div class="btn-group me-2 flex-wrap" role="group" aria-label="First group">
+											<a href="{{ path('program_episode_show', {'slug': program.slug, 'seasonNumber': season.number, 'episodeSlug': episode.slug}) }}" class="btn btn-secondary mb-5" role="button">Voir</a>
+											<a href="{{ path('episode_edit', {'slug': episode.slug}) }}" class="btn btn-warning mb-5" role="button">Editer</a>
+											{{ include('episode/_delete_form.html.twig') }}
+										</div>
 										<p>{{ episode.summary }}</p>
 									</div>
 								</div>
