--- a/templates/comment/_delete_form.html.twig
+++ b/templates/comment/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('actor_delete', {'id': actor.id}) }}" onsubmit="return confirm('Etes-vous sûr de vouloir supprimer cet acteur ?');">
-	<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ actor.id) }}">
+<form method="post" action="{{ path('comment_delete', { 'id': comment.id }) }}" onsubmit="return confirm('Etes-vous sûr de vouloir supprimer ce commentaire ?');">
+	<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ comment.id) }}">
 	<button class="btn btn-danger mb-5">Supprimer</button>
 </form>
