--- a/templates/program/episode_show.html.twig
+++ b/templates/program/episode_show.html.twig
@@ -29,13 +29,17 @@
 					<h4>Commentaires</h4>
 					<hr />
 					{% if app.user %}
-					<a href="{{ path("comment_new", { programSlug: program.slug, seasonNumber: season.number, episodeSlug: episode.slug,  }) }}" class="btn btn-success mb-5" role="button">Nouveau</a>
+					<a href="{{ path("comment_new", { programSlug: program.slug, seasonNumber: season.number, episodeSlug: episode.slug }) }}" class="btn btn-success mb-5" role="button">Nouveau</a>
 					{% endif %}
 					<ul class="list-group list-group-flush">
 						{% for comment in episode.comments %}
 							<li class="list-group-item">							
 								<p>"{{ comment.comment }}"</p>
 								<p class="text-muted fst-italic">{{ comment.author.username }} - {{ comment.rate }}/5</p>
+								<div class="btn-group me-2 flex-wrap" role="group" aria-label="Second group">
+									<a href="{{ path("comment_edit", { programSlug: program.slug, seasonNumber: season.number, episodeSlug: episode.slug, commentId: comment.id }) }}" class="btn btn-warning mb-5" role="button">Editer</a>
+									{{ include('comment/_delete_form.html.twig') }}
+								</div>
 							</li>
 						{% else %}
 							<p class="m-5">
