quest 20 : make routes & return buttons coherents

--- a/templates/category/edit.html.twig
+++ b/templates/category/edit.html.twig
@@ -14,7 +14,7 @@
 	{{ include('category/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
 	{{ include('category/_delete_form.html.twig') }}
 
-	<a href="{{ path('category_index') }}" class="btn btn-secondary m-4" role="button">
+	<a href="{{ path('category_show', {slug: category.slug}) }}" class="btn btn-secondary m-4" role="button">
 		Retour
 	</a>
 
