--- a/templates/category/new.html.twig
+++ b/templates/category/new.html.twig
@@ -21,7 +21,7 @@
 	</div>
 	{{ form_end(form) }}
 
-	<a href="{{ path('app_index') }}" class="btn btn-secondary m-4" role="button">
-		Retour à l'accueil
+	<a href="{{ path('category_index') }}" class="btn btn-secondary m-4" role="button">
+		Retour
 	</a>
 {% endblock %}
