--- a/templates/program/new.html.twig
+++ b/templates/program/new.html.twig
@@ -21,8 +21,8 @@
 	</div>
 	{{ form_end(form) }}
 
-	<a href="{{ path('app_index') }}" class="btn btn-secondary m-4" role="button">
-		Retour à l'accueil
+	<a href="{{ path('program_index') }}" class="btn btn-secondary m-4" role="button">
+		Retour
 	</a>
 
 {% endblock %}
