--- a/templates/season/_delete_form.html.twig
+++ b/templates/season/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('season_delete', {'slug': season.slug}) }}" onsubmit="return confirm('Etes-vous sûr de vouloir supprimer cette saison ?');">
+<form method="post" action="{{ path('season_delete', {'programSlug': season.program.slug, 'seasonNumber': season.number}) }}" onsubmit="return confirm('Etes-vous sûr de vouloir supprimer cette saison ?');">
 	<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ season.id) }}">
 	<button class="btn btn-danger mb-5">Supprimer</button>
 </form>
