--- a/templates/actor/edit.html.twig
+++ b/templates/actor/edit.html.twig
@@ -14,7 +14,7 @@
 	{{ include('actor/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
 	{{ include('actor/_delete_form.html.twig') }}
 
-	<a href="{{ path('actor_index') }}" class="btn btn-secondary m-4" role="button">
+	<a href="{{ path('actor_show', {slug: actor.slug}) }}" class="btn btn-secondary m-4" role="button">
 		Retour
 	</a>
 
