--- a/templates/program/edit.html.twig
+++ b/templates/program/edit.html.twig
@@ -14,7 +14,7 @@
 	{{ include('program/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
 	{{ include('program/_delete_form.html.twig') }}
 
-	<a href="{{ path('program_index') }}" class="btn btn-secondary m-4" role="button">
+	<a href="{{ path('program_show', {slug: program.slug}) }}" class="btn btn-secondary m-4" role="button">
 		Retour
 	</a>
 {% endblock %}
