--- a/templates/episode/show.html.twig
+++ b/templates/episode/show.html.twig
@@ -3,48 +3,62 @@
 {% block title %}
 	{{parent()}}
 	-
-	{{episode.season.program.title}}
-	- Saison
-	{{episode.season.number}}
-	- Episode
-	{{episode.number}}
+	{{program.title}}
+	Saison
+	{{season.number}}
+	-
+	{{ episode.title }}
 {% endblock %}
 
 {% block page_title %}
-	<h1>{{episode.season.program.title}}
+	<h1>{{program.title}}
+		- Saison
+		{{season.number}}
 	</h1>
-	<h3 class="text-muted">
-		Saison
-		{{episode.season.number}}
-		- Episode
-		{{episode.number}}
-	</h3>
 {% endblock %}
 
 {% block body %}
-	<table class="table">
-		<tbody>
-			<tr>
-				<th>Id</th>
-				<td>{{ episode.id }}</td>
-			</tr>
-			<tr>
-				<th>Titre</th>
-				<td>{{ episode.title }}</td>
-			</tr>
-			<tr>
-				<th>Numéro</th>
-				<td>{{ episode.number }}</td>
-			</tr>
-			<tr>
-				<th>Résumé</th>
-				<td>{{ episode.summary }}</td>
-			</tr>
-		</tbody>
-	</table>
+	<div class="row">
+		<div class="col-12 col-lg-8">
+			<div class="card">
+				<div class=" card-body">
+					<h2 class="card-title">{{episode.number}}
+						-
+						{{ episode.title }}</h2>
+					<p class="card-text">{{ episode.summary }}</p>
+					<div class="btn-group me-2 flex-wrap" role="group" aria-label="First group">
+						<a href="{{ path("episode_edit", { programSlug: program.slug, seasonNumber: season.number, episodeSlug: episode.slug }) }}" class="btn btn-warning mb-5" role="button">Editer</a>
+						{{ include('episode/_delete_form.html.twig') }}
+					</div>
+					<h4>Commentaires</h4>
+					<hr/>
+					{% if app.user %}
+						<a href="{{ path("comment_new", { programSlug: program.slug, seasonNumber: season.number, episodeSlug: episode.slug }) }}" class="btn btn-success mb-5" role="button">Nouveau</a>
+					{% endif %}
+					<ul class="list-group list-group-flush">
+						{% for comment in episode.comments %}
+							<li class="list-group-item">
+								<p>"{{ comment.comment }}"</p>
+								<p class="text-muted fst-italic">{{ comment.author.username }}
+									-
+									{{ comment.rate }}/5</p>
+								<div class="btn-group me-2 flex-wrap" role="group" aria-label="Second group">
+									<a href="{{ path("comment_edit", { programSlug: program.slug, seasonNumber: season.number, episodeSlug: episode.slug, commentId: comment.id }) }}" class="btn btn-warning mb-5" role="button">Editer</a>
+									{{ include('comment/_delete_form.html.twig') }}
+								</div>
+							</li>
+						{% else %}
+							<p class="m-5">
+								Aucun commentaire trouvée.
+							</p>
+						{% endfor %}
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
 
-	<a href="{{ path('episode_edit', {'slug': episode.slug}) }}" class="btn btn-warning" role="button">Editer</a>
-	{{ include('episode/_delete_form.html.twig') }}
-
-	<a href="{{ path('episode_index') }}" class="btn btn-secondary m-4" role="button">Retour</a>
+	<a href="{{ path('season_show', {'programSlug': program.slug, 'seasonNumber': season.number}) }}" class="btn btn-secondary m-4" role="button">
+		Retour
+	</a>
 {% endblock %}
