--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block body %}
-	<a href="{{ path('program_edit', {'slug': program.slug}) }}" class="btn btn-warning" role="button">Editer</a>
+	<a href="{{ path('program_edit', {slug: program.slug}) }}" class="btn btn-warning" role="button">Editer</a>
 	{{ include('program/_delete_form.html.twig') }}
 	<div class="row">
 		<div class="col-12 col-lg-8">
@@ -38,7 +38,7 @@
 					<div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
 						<div class="btn-group me-2 flex-wrap" role="group" aria-label="First group">
 							{% for season in seasons %}
-								<a href="{{ path("program_season_show", { slug: program.slug, seasonNumber: season.number }) }}" class="btn btn-secondary" role="button" style="min-width: 50px">
+								<a href="{{ path("season_show", { programSlug: program.slug, seasonNumber: season.number }) }}" class="btn btn-secondary" role="button" style="min-width: 50px">
 									{{season.number}}
 								</a>
 							{% else %}
