--- a/templates/season/show.html.twig
+++ b/templates/season/show.html.twig
@@ -3,45 +3,62 @@
 {% block title %}
 	{{parent()}}
 	-
-	{{season.program.title}}
-	-
-		Saison
+	{{program.title}}
+	Saison
 	{{season.number}}
 {% endblock %}
 
 {% block page_title %}
-	<h1>{{season.program.title}}
+	<h1>{{program.title}}
 	</h1>
-	<h3 class="text-muted">
-		Saison
-		{{season.number}}</h3>
 {% endblock %}
 
 {% block body %}
-	<table class="table">
-		<tbody>
-			<tr>
-				<th>Id</th>
-				<td>{{ season.id }}</td>
-			</tr>
-			<tr>
-				<th>Numéro</th>
-				<td>{{ season.number }}</td>
-			</tr>
-			<tr>
-				<th>Année</th>
-				<td>{{ season.year }}</td>
-			</tr>
-			<tr>
-				<th>Description</th>
-				<td>{{ season.description }}</td>
-			</tr>
-		</tbody>
-	</table>
+	<div class="row">
+		<div class="col-12 col-lg-8">
+			<div class="card">
+				<div class=" card-body">
+					<h2 class="card-title">Saison
+						{{ season.number }}</h2>
+					<p class="card-text">{{ season.year }}</p>
+					<div class="btn-group me-2 flex-wrap" role="group" aria-label="First group">
+						<a href="{{ path('episode_new', { programSlug: program.slug, seasonNumber: season.number }) }}" class="btn btn-success mb-5" role="button">Créer Episode</a>
+						<a href="{{ path("season_edit", { programSlug: program.slug, seasonNumber: season.number }) }}" class="btn btn-warning mb-5" role="button">Editer</a>
+						{{ include('season/_delete_form.html.twig') }}
+					</div>
+					<div class="accordion accordion-flush" id="episodeAccordion">
+						{% for episode in season.episodes %}
+							<div class="accordion-item">
+								<h2 class="accordion-header" id="flush-heading-{{episode.id}}">
+									<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse-{{episode.id}}" aria-expanded="false" aria-controls="flush-collapseOne">
+										{{ episode.number }}
+										-
+										{{ episode.title }}
+									</button>
+								</h2>
+								<div id="flush-collapse-{{episode.id}}" class="accordion-collapse collapse" aria-labelledby="flush-heading-{{episode.id}}" data-bs-parent="#accordionFlushExample">
+									<div class="accordion-body">
+										<div class="btn-group me-2 flex-wrap" role="group" aria-label="First group">
+											<a href="{{ path('episode_show', {programSlug: program.slug, 'seasonNumber': season.number, 'episodeSlug': episode.slug}) }}" class="btn btn-secondary mb-5" role="button">Voir</a>
+											<a href="{{ path('episode_edit', { programSlug: program.slug, seasonNumber: season.number, episodeSlug: episode.slug }) }}" class="btn btn-warning mb-5" role="button">Editer</a>
+											{{ include('episode/_delete_form.html.twig') }}
+										</div>
+										<p>{{ episode.summary }}</p>
+									</div>
+								</div>
+							</div>
+						{% else %}
+							<p class="m-5">
+								Aucun épisode trouvée.
+							</p>
+						{% endfor %}
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 
-
-	<a href="{{ path('season_edit', {'slug': season.slug}) }}" class="btn btn-warning" role="button">Editer</a>
-	{{ include('season/_delete_form.html.twig') }}
-
-	<a href="{{ path('season_index') }}" class="btn btn-secondary m-4" role="button">Retour</a>
+	<a href="{{ path('program_show', {slug: program.slug}) }}" class="btn btn-secondary m-4" role="button">
+		Retour
+	</a>
 {% endblock %}
