--- a/templates/episode/new.html.twig
+++ b/templates/episode/new.html.twig
@@ -13,7 +13,7 @@
 {% block body %}
 	{{ include('episode/_form.html.twig') }}
 
-	<a href="{{ path('season_show', {programSlug: app.request.get("programSlug"), seasonNumber: app.request.get("seasonNumber")}) }}" class="btn btn-secondary m-4" role="button">
+	<a href="{{ path('season_show', {programSlug: app.request.get("programSlug"), seasonSlug: app.request.get("seasonSlug")}) }}" class="btn btn-secondary m-4" role="button">
 		Retour
 	</a>
 {% endblock %}
