--- a/templates/episode/show.html.twig
+++ b/templates/episode/show.html.twig
@@ -27,13 +27,13 @@
 						{{ episode.title }}</h2>
 					<p class="card-text">{{ episode.summary }}</p>
 					<div class="btn-group me-2 flex-wrap" role="group" aria-label="First group">
-						<a href="{{ path("episode_edit", { programSlug: program.slug, seasonNumber: season.number, episodeSlug: episode.slug }) }}" class="btn btn-warning mb-5" role="button">Editer</a>
+						<a href="{{ path("episode_edit", { programSlug: program.slug, seasonSlug: season.slug, episodeSlug: episode.slug }) }}" class="btn btn-warning mb-5" role="button">Editer</a>
 						{{ include('episode/_delete_form.html.twig') }}
 					</div>
 					<h4>Commentaires</h4>
 					<hr/>
 					{% if app.user %}
-						<a href="{{ path("comment_new", { programSlug: program.slug, seasonNumber: season.number, episodeSlug: episode.slug }) }}" class="btn btn-success mb-5" role="button">Nouveau</a>
+						<a href="{{ path("comment_new", { programSlug: program.slug, seasonSlug: season.slug, episodeSlug: episode.slug }) }}" class="btn btn-success mb-5" role="button">Nouveau</a>
 					{% endif %}
 					<ul class="list-group list-group-flush">
 						{% for comment in episode.comments %}
@@ -43,7 +43,7 @@
 									-
 									{{ comment.rate }}/5</p>
 								<div class="btn-group me-2 flex-wrap" role="group" aria-label="Second group">
-									<a href="{{ path("comment_edit", { programSlug: program.slug, seasonNumber: season.number, episodeSlug: episode.slug, commentId: comment.id }) }}" class="btn btn-warning mb-5" role="button">Editer</a>
+									<a href="{{ path("comment_edit", { programSlug: program.slug, seasonSlug: season.slug, episodeSlug: episode.slug, commentId: comment.id }) }}" class="btn btn-warning mb-5" role="button">Editer</a>
 									{{ include('comment/_delete_form.html.twig') }}
 								</div>
 							</li>
@@ -58,7 +58,7 @@
 		</div>
 	</div>
 
-	<a href="{{ path('season_show', {'programSlug': program.slug, 'seasonNumber': season.number}) }}" class="btn btn-secondary m-4" role="button">
+	<a href="{{ path('season_show', {'programSlug': program.slug, seasonSlug: season.slug}) }}" class="btn btn-secondary m-4" role="button">
 		Retour
 	</a>
 {% endblock %}
