delete useless field in season & ep forms

--- a/templates/season/new.html.twig
+++ b/templates/season/new.html.twig
@@ -8,6 +8,7 @@
 {% block page_title %}
 	<h1>Créer une nouvelle saison
 	</h1>
+	<p class="text-muted">{{program.title}}</p>
 {% endblock %}
 
 {% block body %}
