--- a/templates/episode/new.html.twig
+++ b/templates/episode/new.html.twig
@@ -8,6 +8,9 @@
 {% block page_title %}
 	<h1>Créer un nouvel épisode
 	</h1>
+	<p class="text-muted">{{program.title}}
+		- Saison
+		{{season.number}}</p>
 {% endblock %}
 
 {% block body %}
